# theFrisbee

./: .contemporary.json  .parlance.json  CMakeLists.txt  theFrisbee.pro
.github/workflows/: flatpak-stable.yml  flatpak.yml
application/: CMakeLists.txt  application.pro  com.vicr123.thefrisbee.desktop  com.vicr123.thefrisbee.metainfo.xml  com.vicr123.thefrisbee_blueprint.desktop  com.vicr123.thefrisbee_blueprint.metainfo.xml  diskmodel.cpp  diskpane.cpp  diskpane.h  diskpane.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  operationmanager.cpp  operationmanager.h  partitioninformation.h  resources.qrc
application/components/: partitionvisualisation.cpp  partitionvisualisation.h  sizeeditbox.cpp  sizeeditbox.h
application/diskPanes/: diskpanecomponent.cpp  diskpanecomponent.h  lvmdiskpane.cpp  lvmdiskpane.h  lvmdiskpane.ui  overviewdiskpane.cpp  overviewdiskpane.h  overviewdiskpane.ui  smartdiskpane.cpp  smartdiskpane.h  smartdiskpane.ui
application/jobs/: editpartitionjob.cpp  editpartitionjob.h  erasecdrwjob.cpp  erasecdrwjob.h  restorediskjob.cpp  restorediskjob.h  restorejob.cpp  restoreopticaljob.cpp  restoreopticaljob.h
application/jobs/progress/: editpartitionjobprogress.cpp  editpartitionjobprogress.h  erasecdrwjobprogress.cpp  erasecdrwjobprogress.ui  restorediskjobprogress.cpp  restorediskjobprogress.ui  restoreopticaljobprogress.cpp  restoreopticaljobprogress.ui
application/lvm/: lvmpage.cpp  lvmpage.h  lvmpage.ui  volumegrouppage.cpp  volumegrouppage.h  volumegrouppage.ui
application/operations/: creatediskimagepopover.cpp  creatediskimagepopover.h  creatediskimagepopover.ui  eraseopticalpopover.h  eraseopticalpopover.ui  erasepartitionpopover.cpp  erasepartitionpopover.ui  erasepartitiontablepopover.ui  imagepopover.cpp  imagepopover.h  imagepopover.ui  partitionpopover.cpp  partitionpopover.h  partitionpopover.ui  restoreopticalpopover.cpp  restoreopticalpopover.h  restoreopticalpopover.ui
application/optical/: opticalerrortracker.cpp
application/popovers/: pvremovepopover.cpp  pvremovepopover.h  pvremovepopover.ui  smartpopover.cpp  smartpopover.h  smartpopover.ui
application/translations/: aa_ET.ts  af_ZA.ts  am_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.qm  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  da.qm  da.ts  de_DE.ts  en_CA.ts  en_NZ.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_CA.ts  fr_FR.ts  ha_NE.ts  he_IL.ts  hi_IN.ts  hr_HR.ts  (+50 more)
application/translations/desktop/com.vicr123.thefrisbee/: ar_SA.json  cs.json  da.json  en.json  he_IL.json  nl.json  tr.json  vi.json
application/translations/desktop/com.vicr123.thefrisbee_blueprint/: en.json
libthefrisbee/: CMakeLists.txt  com.vicr123.trigger-uevent.policy  diskmodel.h  diskoperationmanager.cpp  diskoperationmanager.h  driveobjectmanager.cpp  driveobjectmanager.h  frisbeeexception.cpp  frisbeeexception.h  libthefrisbee.pro  libthefrisbeeConfig.cmake.in  libthefrisbee_global.h  partitioninformation.cpp  partitioninformation.h  qt_frisbee.pri  trigger-uevent.sh  volumegrouplvmodel.cpp  volumegrouplvmodel.h  volumegroupmodel.cpp  volumegroupmodel.h  volumegrouppvmodel.cpp  volumegrouppvmodel.h
libthefrisbee/DriveObjects/: atadriveinterface.cpp  atadriveinterface.h  blockinterface.cpp  blockinterface.h  blocklvm2interface.cpp  blocklvm2interface.h  diskinterface.cpp  diskinterface.h  diskobject.cpp  diskobject.h  driveinterface.cpp  driveinterface.h  encryptedinterface.cpp  encryptedinterface.h  filesysteminterface.cpp  filesysteminterface.h  logicalvolume.cpp  logicalvolume.h  loopinterface.cpp  loopinterface.h  partitioninterface.cpp  partitioninterface.h  partitiontableinterface.cpp  partitiontableinterface.h  physicalvolumeinterface.cpp  physicalvolumeinterface.h  udisksinterface.cpp  udisksinterface.h  volumegroup.cpp  volumegroup.h
libthefrisbee/components/: partitionvisualisation.cpp  partitionvisualisation.h  sizeeditbox.cpp  sizeeditbox.h  sizerangebox.cpp  sizerangebox.h  sizerangebox.ui
libthefrisbee/jobs/: editpartitionjob.cpp  editpartitionjob.h  erasecdrwjob.cpp  erasecdrwjob.h  imageblockjob.cpp  imageblockjob.h  restorediskjob.cpp  restorediskjob.h  restorejob.h  restoreopticaljob.cpp  restoreopticaljob.h
libthefrisbee/jobs/progress/: editpartitionjobprogress.cpp  editpartitionjobprogress.ui  erasecdrwjobprogress.cpp  erasecdrwjobprogress.h  erasecdrwjobprogress.ui  imageblockjobprogress.cpp  imageblockjobprogress.h  imageblockjobprogress.ui  restorediskjobprogress.cpp  restorediskjobprogress.h  restorediskjobprogress.ui  restoreopticaljobprogress.cpp  restoreopticaljobprogress.h  restoreopticaljobprogress.ui
libthefrisbee/operations/: addlvpopover.cpp  addlvpopover.h  addlvpopover.ui  attachpvpopover.cpp  attachpvpopover.h  attachpvpopover.ui  disbandvgpopover.cpp  disbandvgpopover.h  disbandvgpopover.ui  eraseopticalpopover.cpp  eraseopticalpopover.ui  erasepartitionpopover.cpp  erasepartitionpopover.h  erasepartitionpopover.ui  erasepartitiontablepopover.cpp  erasepartitiontablepopover.h  erasepartitiontablepopover.ui  imagepopover.cpp  imagepopover.h  imagepopover.ui  partitionpopover.cpp  partitionpopover.h  partitionpopover.ui  removelvpopover.cpp  removelvpopover.h  removelvpopover.ui  restoreopticalpopover.cpp  restoreopticalpopover.h  restoreopticalpopover.ui
libthefrisbee/optical/: opticalerrortracker.cpp  opticalerrortracker.h
libthefrisbee/structures/: formattedsmartattribute.cpp  formattedsmartattribute.h
libthefrisbee/structures/private/: smartattribute.cpp  smartattribute.h
libthefrisbee/translations/: cs.ts  cs_CZ.ts  da.qm  da.ts  de.qm  de.ts  en_US.ts  he_IL.ts  nl_NL.ts  ru.ts  vi.qm  vi.ts  vi_VN.ts
